--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header class="bg-red-800 shadow-2xl">
         <nav class="container mx-auto py-5 text-white font-medium capitalize text-lg flex max-md:gap-5 max-md:flex-col justify-between items-center">
             <div>
-                <a class="text-2xl" href="./index.html">papa johns</a>
+                <a class="text-2xl" href="https://papa-johns-byatilla.vercel.app">papa johns</a>
             </div>
             <ul class="flex items-center max-md:flex-col gap-5 max-md:gap-0" id="navbar"></ul>
             <div class="flex gap-3 text-2xl">
@@ -101,7 +101,7 @@
         <div class="container mx-auto px-4 sm:px-6 pt-16 pb-6">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
             <div class="mb-6 sm:mb-0">
-              <h2 class="text-2xl font-bold mb-4">Papa Johns</h2>
+              <a href="https://papa-johns-byatilla.vercel.app" class="text-2xl font-bold mb-4">Papa Johns</a>
               <p class="text-gray-200 text-base md:text-lg mb-4">Ləzzətin ünvanı - Sizə ən dadlı pizzaları təqdim edirik. Keyfiyyətli inqrediyentlər və peşəkar hazırlanma.</p>
               <div class="flex space-x-4 text-xl">
                 <a href="#" class="hover:text-yellow-400 transition-colors"><i class="fa-brands fa-facebook"></i></a>
