--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         }
     
         body {
-          background: #eee;
           color: #000;
           margin: 0;
           padding: 0;
@@ -47,8 +46,8 @@
         }
       </style>
 </head>
-<body class="bg-[#f8f8f8]">
-    <header class="bg-red-800 shadow-2xl">
+<body id="bodyTogg" class="bg-gray-300 dark:bg-green-950 transition-colors duration-500">
+    <header id="navbarTogg" class="bg-red-800 dark:bg-green-800 shadow-2xl transition-colors duration-500">
         <nav class="container mx-auto py-5 text-white font-medium capitalize text-lg flex max-md:gap-5 max-md:flex-col justify-between items-center">
             <div>
                 <a class="text-2xl" href="https://papa-johns-byatilla.vercel.app">papa johns</a>
@@ -56,7 +55,7 @@
             <ul class="flex items-center max-md:flex-col gap-5 max-md:gap-0" id="navbar"></ul>
             <div class="flex gap-3 text-2xl">
                 <button><i class="fa-solid fa-cart-plus"></i></button>
-                <button><i class="fa-solid fa-circle-half-stroke"></i></button>
+                <button id="themeToggle" class="cursor-pointer"><i class="fa-solid fa-circle-half-stroke"></i></button>
             </div>
         </nav>
     </header>
@@ -97,7 +96,7 @@
         </div>
         </div>
     </div>
-    <footer class="bg-red-800 text-white mt-20">
+    <footer class="bg-red-800 dark:bg-green-800 text-white mt-20">
         <div class="container mx-auto px-4 sm:px-6 pt-16 pb-6">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
             <div class="mb-6 sm:mb-0">
@@ -189,7 +188,6 @@
     </script>
     <script type="module" src="js/navbar.js"></script>
     <script type="module" src="js/swiper.js"></script>
-    <script type="module" src="js/app.js"></script>
     <script>
       window.addEventListener('beforeunload', function (e) {
           console.log("🌀 Sayfa yenileniyor!");
