--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
     </script>
     <script type="module" src="js/navbar.js"></script>
     <script type="module" src="js/swiper.js"></script>
+    <script type="module" src="js/app.js"></script>
     <script>
       window.addEventListener('beforeunload', function (e) {
           console.log("🌀 Sayfa yenileniyor!");
