--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div id="inpButton" class="my-10 hidden">
             <button onclick="openPostForm()" class="py-4 px-10   bg-yellow-400 cursor-pointer rounded-lg ">Add a Product +</button>
         </div>
-        <div id="inputSection" class="w-full max-w-2xl mx-auto p-6 my-10 bg-white rounded-lg shadow-2xl hidden">
-          <h2 id="addTitle" class="text-2xl font-bold text-gray-800 mb-6"></h2>
+        <div id="inputSection" class="w-full max-w-2xl mx-auto p-6 my-10 bg-white dark:bg-green-800 rounded-lg shadow-2xl hidden">
+          <h2 id="addTitle" class="text-2xl font-bold text-gray-800 dark:text-white mb-6"></h2>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
               <input class="border px-5 py-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="title">
               <input class="border px-5 py-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="price">
