--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         }
       </style>
 </head>
-<body id="bodyTogg" class="bg-gray-300 dark:bg-green-950 transition-colors duration-500">
-    <header id="navbarTogg" class="bg-red-800 dark:bg-green-800 shadow-2xl transition-colors duration-500">
+<body class="bg-gray-300 dark:bg-green-950 transition-colors duration-500">
+    <header class="bg-red-800 dark:bg-green-800 shadow-2xl transition-colors duration-500">
         <nav class="container mx-auto py-5 text-white font-medium capitalize text-lg flex max-md:gap-5 max-md:flex-col justify-between items-center">
             <div>
                 <a class="text-2xl" href="https://papa-johns-byatilla.vercel.app">papa johns</a>
