input color change

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         <div id="inputSection" class="w-full max-w-2xl mx-auto p-6 my-10 bg-white dark:bg-green-800 rounded-lg shadow-2xl hidden">
           <h2 id="addTitle" class="text-2xl font-bold text-gray-800 dark:text-white mb-6"></h2>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
-              <input class="border dark:border-white dark:bg-white placeholder-black px-5 py-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="title">
-              <input class="border dark:border-white dark:bg-white placeholder-black px-5 py-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="price">
-              <input class="border dark:border-white dark:bg-white placeholder-black px-5 py-2 rounded-lg w-full md:col-span-2 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="img url">
-              <input class="border dark:border-white dark:bg-white placeholder-black px-5 py-2 rounded-lg w-full md:col-span-2 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="composition">
+              <input class="border dark:border-white dark:bg-white placeholder-gray-600 px-5 py-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="title">
+              <input class="border dark:border-white dark:bg-white placeholder-gray-600 px-5 py-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="price">
+              <input class="border dark:border-white dark:bg-white placeholder-gray-600 px-5 py-2 rounded-lg w-full md:col-span-2 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="img url">
+              <input class="border dark:border-white dark:bg-white placeholder-gray-600 px-5 py-2 rounded-lg w-full md:col-span-2 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500" type="text" placeholder="composition">
           </div>
           <div class="flex gap-4 justify-end">
               <button type="button" onclick="createPost(event)" class="px-5 py-2 text-white cursor-pointer rounded-lg bg-emerald-600 hover:bg-emerald-700 transition-colors">Add +</button>
